# rushcut

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LEARNINGS.md  LICENSE  LICENSES.md  README.md  index.html  launch-dev.bat  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  wdio.attach.conf.ts  wdio.conf.ts
.claude/: launch.json  settings.json
.serena/: project.yml
docs/: ARCHITECTURE.md  BATCH-Q2-FPS-STUTTER.md  BATCH-R-PART-C.md  BATCH-T-PLAN.md  BATCH_N_PLAN.md  BUILD-PLAN.md  CHANGELOG.md  COMPETITORS.md  CONTEXT.md  DECISIONS.md  DESIGN.md  E2E-DEBUGGING.md  FEATURE-PHOTO-INCLUSION.md  LEARNINGS.md  PRD-DEV.md  PRD.md  SPLASH-DIAGNOSTICS.md  TEST.md  agent_plan.md  batch-plan-u1-subbatches.md  batch-plan-u4d-subbatches.md  batch-plan.md  quality-goal.md  rushcut-launch-plan.md  speed-goal.md  temp-autonomous-pp-pipeline-recipe.md  trimmer-designs.html
e2e/: arrange.spec.ts  fast.spec.ts  gap-editor.spec.ts  library.spec.ts  readonly-check.spec.ts  render.spec.ts  sound.spec.ts  transitions.spec.ts  trimmer.spec.ts
lambda/: Dockerfile  handler.py  requirements.txt
music/: README.md
pipeline/: _test_clipitem_splice.py  _test_imports.py  beats.py  cards.py  encoder.py  loudnorm.py  motion.py  music.py  normalise.py  proxy.py  render.py  render_cache.py  run.py  scan.py  transitions.py  trim.py  utils.py  warm_zoom.py  zoom.py  zoom_cache.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs  splash.rs
(+121 files in other folders)
