[package]
name = "rushcut"
version = "0.1.0"
edition = "2021"

[lib]
name = "rushcut_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
base64 = "0.22"

[build-dependencies]
tauri-build = { version = "2", features = [] }
